Change git url-ing

--- a/src/index.html
+++ b/src/index.html
@@ -12,18 +12,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="">
   <meta name="description" content="">
-  <!-- animate css -->
-  <link rel="stylesheet" href="http://www.templatemo.com/templates/templatemo_446_boxer/css/animate.min.css">
   <!-- bootstrap css -->
-  <link rel="stylesheet" href="http://www.templatemo.com/templates/templatemo_446_boxer/css/bootstrap.min.css">
-  <!-- font-awesome -->
-  <link rel="stylesheet" href="http://www.templatemo.com/templates/templatemo_446_boxer/css/font-awesome.min.css">
-  <!-- google font -->
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,700,800' rel='stylesheet' type='text/css'>
-
-  <!-- custom css -->
-  <link rel="stylesheet" href="http://www.templatemo.com/templates/templatemo_446_boxer/css/templatemo-style.css">
-
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 
 <body>
@@ -45,9 +35,9 @@
 
   <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script src="http://www.templatemo.com/templates/templatemo_446_boxer/js/wow.min.js"></script>
-  <script src="http://www.templatemo.com/templates/templatemo_446_boxer/js/jquery.singlePageNav.min.js"></script>
-  <script src="http://www.templatemo.com/templates/templatemo_446_boxer/js/custom.js"></script>
+  <script src="https://rawgit.com/iamdevlinph/VueJS-Landing-Page-Boilerplate/master/src/assets/js/wow.min.js"></script>
+  <script src="https://rawgit.com/iamdevlinph/VueJS-Landing-Page-Boilerplate/master/src/assets/js/jquery.singlePageNav.min.js"></script>
+  <script src="https://rawgit.com/iamdevlinph/VueJS-Landing-Page-Boilerplate/master/src/assets/js/custom.js"></script>
 </body>
 
 </html>
