Add google analytics

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,15 @@
     	Boxer Template
     	http://www.templatemo.com/tm-446-boxer
     	-->
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-100423670-4"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-100423670-4');
+  </script>
   <meta charset="utf-8">
   <title>Boxer - Software Landing Page</title>
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
