--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
-<!DOCTYPE html> <html lang=en> <head> <meta charset=utf-8> <title>Boxer - Software Landing Page</title> <meta http-equiv=X-UA-Compatible content="IE=Edge"> <meta name=viewport content="width=device-width,initial-scale=1"> <meta name=keywords content=""> <meta name=description content=""> <link rel=stylesheet href=https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css integrity=sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u crossorigin=anonymous> <link rel="shortcut icon" href="https://codesandcoffee.github.io/vuejs-landing-page/favicon.ico"><link href="https://codesandcoffee.github.io/vuejs-landing-page/styles/app.bbdf6c067085b559f18b.css" rel="stylesheet"></head> <body> <div class=preloader> <div class="sk-spinner sk-spinner-rotating-plane"></div> </div> <div id=app> <navigation></navigation> <home></home> <divider></divider> <feature></feature> <pricing></pricing> <download></download> <contact></contact> <page-footer></page-footer> </div> <script src=https://code.jquery.com/jquery-2.2.4.min.js></script> <script src=https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js></script> <script src=https://rawgit.com/codesandcoffee/vuejs-landing-page/master/src/assets/js/wow.min.js></script> <script src=https://rawgit.com/codesandcoffee/vuejs-landing-page/master/src/assets/js/jquery.singlePageNav.min.js></script> <script src=https://rawgit.com/codesandcoffee/vuejs-landing-page/master/src/assets/js/custom.js></script> <script type="text/javascript" src="https://codesandcoffee.github.io/vuejs-landing-page/js/app.bbdf6c067085b559f18b.js"></script></body> </html> 
+<!DOCTYPE html>
+<html lang=en>
+
+<head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-100423670-4"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-100423670-4');
+    </script>
+
+    <meta charset=utf-8>
+    <title>Boxer - Software Landing Page</title>
+    <meta http-equiv=X-UA-Compatible content="IE=Edge">
+    <meta name=viewport content="width=device-width,initial-scale=1">
+    <meta name=keywords content="">
+    <meta name=description content="">
+    <link rel=stylesheet href=https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css integrity=sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u
+        crossorigin=anonymous>
+    <link rel="shortcut icon" href="https://codesandcoffee.github.io/vuejs-landing-page/favicon.ico">
+    <link href="https://codesandcoffee.github.io/vuejs-landing-page/styles/app.bbdf6c067085b559f18b.css" rel="stylesheet">
+</head>
+
+<body>
+    <div class=preloader>
+        <div class="sk-spinner sk-spinner-rotating-plane"></div>
+    </div>
+    <div id=app>
+        <navigation></navigation>
+        <home></home>
+        <divider></divider>
+        <feature></feature>
+        <pricing></pricing>
+        <download></download>
+        <contact></contact>
+        <page-footer></page-footer>
+    </div>
+    <script src=https://code.jquery.com/jquery-2.2.4.min.js></script>
+    <script src=https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js></script>
+    <script src=https://rawgit.com/codesandcoffee/vuejs-landing-page/master/src/assets/js/wow.min.js></script>
+    <script src=https://rawgit.com/codesandcoffee/vuejs-landing-page/master/src/assets/js/jquery.singlePageNav.min.js></script>
+    <script src=https://rawgit.com/codesandcoffee/vuejs-landing-page/master/src/assets/js/custom.js></script>
+    <script type="text/javascript" src="https://codesandcoffee.github.io/vuejs-landing-page/js/app.bbdf6c067085b559f18b.js"></script>
+</body>
+
+</html>
