--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <meta name=description content="">
     <link rel=stylesheet href=https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css integrity=sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u
         crossorigin=anonymous>
-    <link rel="shortcut icon" href="https://codesandcoffee.github.io/vuejs-landing-page/favicon.ico">
-    <link href="https://codesandcoffee.github.io/vuejs-landing-page/styles/app.bbdf6c067085b559f18b.css" rel="stylesheet">
+    <link rel="shortcut icon" href="https://codesandcoffees.github.io/vuejs-landing-page/favicon.ico">
+    <link href="https://codesandcoffees.github.io/vuejs-landing-page/styles/app.bbdf6c067085b559f18b.css" rel="stylesheet">
 </head>
 
 <body>
@@ -43,10 +43,10 @@
     </div>
     <script src=https://code.jquery.com/jquery-2.2.4.min.js></script>
     <script src=https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js></script>
-    <script src=https://rawgit.com/codesandcoffee/vuejs-landing-page/master/src/assets/js/wow.min.js></script>
-    <script src=https://rawgit.com/codesandcoffee/vuejs-landing-page/master/src/assets/js/jquery.singlePageNav.min.js></script>
-    <script src=https://rawgit.com/codesandcoffee/vuejs-landing-page/master/src/assets/js/custom.js></script>
-    <script type="text/javascript" src="https://codesandcoffee.github.io/vuejs-landing-page/js/app.bbdf6c067085b559f18b.js"></script>
+    <script src=https://rawgit.com/codesandcoffees/vuejs-landing-page/master/src/assets/js/wow.min.js></script>
+    <script src=https://rawgit.com/codesandcoffees/vuejs-landing-page/master/src/assets/js/jquery.singlePageNav.min.js></script>
+    <script src=https://rawgit.com/codesandcoffees/vuejs-landing-page/master/src/assets/js/custom.js></script>
+    <script type="text/javascript" src="https://codesandcoffees.github.io/vuejs-landing-page/js/app.bbdf6c067085b559f18b.js"></script>
 </body>
 
 </html>
